# lerobot-genesis

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: record_franka.py
src/lerobot_genesis/: __init__.py  config.py  driver.py  env.py  groot.py  recording.py
tests/: helpers.py  test_config.py  test_driver_gpu.py  test_env.py  test_groot.py  test_recording.py
